Fix issue with thanks on contact page

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -7,8 +7,9 @@ order: 3
 ---
 
 <div class="page-contact">
-  <div id="thanks" class="show-on-target">
-    <p>Thanks for reaching out, I'll get back to you ASAP 😊</p>
+  <div id="thanks" class="show-on-target text-center">
+    <p class="text-large"><strong>Thanks for reaching out, I'll get back to you ASAP</strong></p>
+    <span style="font-size:4rem;">😊</span>
     <br />
   </div>
 
