--- a/_pages/audible.html
+++ b/_pages/audible.html
@@ -1,6 +1,6 @@
 ---
 layout: redirect_to
-title: Audible Offer!
+title: An Audible offer from Favicon Valley for you! 😀
 redirect_to:
   - http://www.amazon.com/gp/product/B00NB86OYE/ref=as_li_qf_sp_asin_il_tl?ie=UTF8&camp=1789&creative=9325&creativeASIN=B00NB86OYE&linkCode=as2&tag=favivall-20&linkId=NACSV53QGI5ZWRK6
 ---
