--- a/_pages/bookings.html
+++ b/_pages/bookings.html
@@ -5,7 +5,7 @@ title: Interview Booking
 
 <div id="bookingjs">
   <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-  <script src="http://cdn.timekit.io/booking-js/v1/booking.min.js" defer></script>
+  <script src="http://cdn.timekit.io/booking-js/v1/booking.min.js"></script>
   <script>
     var widget = new TimekitBooking()
     widget.init({
