Tweaks to logo url

--- a/_pages/bookings.html
+++ b/_pages/bookings.html
@@ -39,7 +39,7 @@ title: Interview Booking
           ]
         }
       },
-      avatar: 'https://d1a5a04sfj6djm.cloudfront.net/avatar256.png'
+      avatar: '{{ site.logo_url }}'
     })
   </script>
 </div>
