Remove form that is being spammed hard

--- a/_pages/contact.html
+++ b/_pages/contact.html
@@ -7,26 +7,7 @@ order: 3
 ---
 
 <div class="page-contact">
-  <div id="thanks" class="show-on-target text-center">
-    <p class="text-large"><strong>Thanks for reaching out, I'll get back to you ASAP</strong></p>
-    <span style="font-size:4rem;">😊</span>
-    <br />
-  </div>
-
-  <form action="https://formaholic.com/f/cc6720cb7f5e0e17" method="POST" class="form">
-    <input type="text" name="_gotcha" style="display:none">
-    <div class="form-control">
-      <label for="formName">Name</label>
-      <input type="text" name="name" class="form-full-width" id="formName">
-    </div>
-    <div class="form-control">
-      <label for="formEmail">Email</label>
-      <input type="email" name="email" id="formEmail" class="form-full-width" required="true">
-    </div>
-    <div class="form-control">
-      <label for="formMessage">Message</label>
-      <textarea name="message" id="formMessage" class="form-full-width" rows="8" cols="40" placeholder="Enter your message here"></textarea>
-    </div>
-    <input type="submit" value="Send" class="button">
-  </form>
+  <p class="text-large text-center">
+    <a href="https://twitter.com/faviconvalley">Reach out on  Twitter</a> If you wanna chat <span style="font-size:3rem;">😊</span>
+  </p>
 </div>
