--- a/404.html
+++ b/404.html
@@ -6,6 +6,6 @@ layout: error
   <h2>Hmm, looks like the content you were looking for up and left.</h2>
 
   <p>This is an awkward place to be, I know. Not being found and not knowing what to do is scary.
-    In the meantime, you can <a href="{{ '' | prepend: site.baseurl | prepend: site.url }}">go home</a>
+    In the meantime, you can <a href="{{ '' | absolute_url }}">go home</a>
     and look for what you originally came to find there.</p>
 </div>
